k8s-spec/prod/discord-bot-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discord-bot
  namespace: ore
  labels:
    app: discord-bot
    tier: frontend
    env: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: discord-bot
      tier: frontend
      env: production
  template:
    metadata:
      labels:
        app: discord-bot
        tier: frontend
        env: production
    spec:
      containers:
      - name: ore-discord-bot
        image: boyroywax/ore-discord-bot
        resources:
          requests:
            memory: "512Mi"
            cpu: "250m"
          limits:
            memory: "1024Mi"
            cpu: "750m"
      restartPolicy: Always
