k8s-spec/prod/discord-callback-lb.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ore-callback-p
  namespace: ore
spec:
  type: LoadBalancer
  ports:
    - port: 53134
      protocol: TCP
      targetPort: 53134
      name: http
  selector:
    app: discord-callback
    tier: backend
    env: production
---
