k8s-spec/prod/discord-service-dep.yaml
apiVersion: v1
kind: Service
metadata:
  name: ore-service-p
  namespace: ore
spec:
  type: NodePort
  ports:
    - port: 53134
      protocol: TCP
      targetPort: 53134
      name: http
  selector:
    app: discord-service
    tier: backend
    env: production
---
