k8s-spec/prod/auth-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auth-ingress
  namespace: ore
  annotations:
    networking.gke.io/managed-certificates: managed-cert
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "ord-discord-bot"
spec:
  defaultBackend:
    service:
      name: ore-callback-p
      port:
        name: http
  rules:
  - host: "cb.ore.network"
    http:
      paths:
      - pathType: Prefix
        path: "/app/"
        backend:
          service:
            name: ore-callback-p
            port:
              name: http
      - pathType: Prefix
        path: "/api/"
        backend:
          service:
            name: ore-service-p
            port:
              name: http
